--- a/ruff.css
+++ b/ruff.css
@@ -33,7 +33,7 @@ footer, header, hgroup, menu, nav, section{
 	display: block;
 }
 body{
-	line-height: 1;
+	line-height: 1; 
 }
 ol, ul{
 	list-style: none;
@@ -54,7 +54,7 @@ table{
 /* Ruff! formatting */
 body{
   margin:    1em;
-  font:  14px arial,helvetica,clean,sans-serif;
+  font:  14px Verdana,arial,helvetica,clean,sans-serif;
 }
 h1{
   background-color: #006666;
@@ -158,8 +158,7 @@ pre{
   /* border: thin solid #cccccc; */
   font-family: "Courier New", Courier, monospace;
   /* font-size: smaller; */
-  margin-top: 1em;
-  margin-left: 1em;
+  margin: 1em;
   padding: 5px;
 }
 
@@ -171,126 +170,4 @@ code{
   font-family: monospace;
 }
 
-div.navbox{
-    /* margin-top: 1em; */
-    color: #006666;
-}
-
-/* Note .navbox header css should be based on $header_levels */
-.navbox h1, .navbox h2, .navbox h3, .navbox h4, .navbox h5{
-  font-size: 85%;
-  margin: 0px;
-}
-.navbox h1, .navbox h2, .navbox h3{
-    font-weight: bold;
-}
-.navbox h1{
-    background-color: #006666;
-}
-.navbox h2{
-    margin-left: 1em;
-}
-.navbox h3{
-    margin-left: 2em;
-}
-.navbox h4{
-    margin-left: 2em;
-    font-weight: normal;
-}
-.navbox h5{
-    margin-left: 3em;
-    font-weight: normal;
-}
-
-.navbox hr{
-    color: #006666;
-}
-
-.navbox a:link, .navbox a:visited{
-  text-decoration: none;
-    color: #006666;
-}
-
-.navbox a:hover{
-   font-weight: bold;
-}
-
-.navbox h1 a:link, .navbox h1 a:visited{
-    color: white;
-}
-
-/* Easy CSS Tooltip - by Koller Juergen [www.kollermedia.at] */
-.navbox a:hover{background:#ffffff; text-decoration:none;} /*BG color is a must for IE6*/
-.navbox a.tooltip span{display:none; padding:2px 3px; margin-left:8px; width: 100%;}
-/* .navbox a.tooltip span{display:none; padding:2px 3px; margin-left:8px; width:130px;} */
-.navbox a.tooltip:hover span{display:inline; position:absolute; border:1px solid #cccccc; background:#ffffff; color:#6c6c6c;}
-.navbox h1 a:hover{background: #006666;}
-
-span.ns_scope{
-    color: #aaaaaa;
-}
-
-span.ns_scope a:link, span.ns_scope a:visited{
-  text-decoration: none;
-  color: #aaaaaa;
-
-}
-
-span.ns_scope a:hover{
-  text-decoration: none;
-  color: #666666;
-}
-
-h1.ruff{
-    background-color: #006666;
-    color: #ffffff;
-}
-h2.ruff{
-    font-variant: small-caps;
-    color: #006666;
-}
-
-h3.ruff, h4.ruff, h5.ruff, h6.ruff{
-    color: #006666;
-}
-h5.ruff, h6.ruff{
-    font-style: italic;
-    font-weight: normal;
-}
-
-
-h3.ruffclass, h3.ruffproc, h3.ruffmethod,
-h4.ruffclass, h4.ruffproc, h4.ruffmethod,
-h5.ruffclass, h5.ruffproc, h5.ruffmethod{
-    border-bottom: thin solid #006666;
-    color: #006666;
-    margin-bottom: 0em;
-}
-
-pre.ruff{
-    margin-top: 1em;
-}
-
-.ruff_synopsis{
-    border: thin solid #cccccc;
-    background: #eeeeee;
-    font-size: smaller;
-    font-family: "Courier New", Courier, monospace;
-    padding: 5px;
-    margin: 0px 50px 20px;
-}
-.ruff_const, .ruff_cmd, ruff_defitem{
-    font-weight: bold;
-    font-family: "Courier New", Courier, monospace;
-}
-.ruff_arg{
-    font-style: italic;
-    font-family: "Courier New", Courier, monospace;
-}
-
-.ruff_dyn_src{
-    background-color: #eeeeee;
-    padding: 5px;
-    display: none;
-}
 
