Rework document api, delete obsolete files, fix markdown.

--- a/src/ruff-html.css
+++ b/src/ruff-html.css
@@ -53,6 +53,7 @@ p.linkline {
     font-variant: normal;
     font-family: Arial, sans-serif;
     float: right;
+    padding:2px;
 }
 
 h1 .tinylink a {
