Remove "Reference" from namespace heading as it broke linking.

--- a/src/ruff-html.css
+++ b/src/ruff-html.css
@@ -56,7 +56,7 @@ a:hover {
     text-decoration: underline;
 }
 .tinylink a {
-    //text-decoration: underline;
+    text-decoration: underline;
 }
 
 #bd {
